--- a/book.toml
+++ b/book.toml
@@ -9,3 +9,6 @@ title = "ADSL Reading Group"
 git-repository-url = "https://github.com/adsl-rg/adsl-rg.github.io"
 git-repository-icon = "fa-github"
 edit-url-template = "https://github.com/adsl-rg/adsl-rg.github.io/edit/main/{path}"
+
+[output.html.print]
+enable = false
